<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Wander</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wander">Wander</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="features">Features</string>
    <string name="skip">Skip</string>
    <string name="onboard_title_one">Serve The Best Place</string>
    <string name="onboard_subtitle_one">Explore your destination and we live up to your expectations</string>
    <string name="onboard_title_two">Easy To Find</string>
    <string name="onboard_subtitle_two">We will find your place based your image reference</string>
    <string name="onboard_title_three">Flexible Search</string>
    <string name="onboard_subtitle_three">Use your keywords and we will give you the best place</string>
    <string name="explore_now">Explore Now</string>
    <string name="next">Next</string>
    <string name="place_gallery">"Place Image Gallery "</string>
    <string name="top_reviews">Top Reviews</string>
    <string name="see_all_reviews">See All Reviews</string>
    <string name="give_a_review">Give a Review</string>
    <string name="open_in_map">" • Open in map"</string>
    <string name="back_button">back</string>
    <string name="search_places">search places</string>
    <string name="not_found">Not Found</string>
    <string name="rating">rating</string>
    <string name="title_review">What makes you memorable?</string>
    <string name="hint_review">Tell your experience about this place</string>
    <string name="add_image">Add Image</string>
    <string name="submit">Submit</string>
    <string name="disappointed">Disappointed</string>
    <string name="dont_like">Do not like it much</string>
    <string name="not_bad">Not bad</string>
    <string name="like_it">Like it!</string>
    <string name="best_place">Best Place!</string>
    <string name="wishlist">Wishlist</string>
    <string name="review">My Review</string>
</resources>