<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search_places"
        app:iconTint="@color/blue"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/wishlist"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/wishlist"
        app:iconTint="@color/blue"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/review"
        android:icon="@drawable/ic_baseline_rate_review_24"
        android:title="@string/review"
        app:iconTint="@color/blue"
        app:showAsAction="ifRoom"/>
</menu>