<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@id/shimmer_container"
        app:shimmer_auto_start="true"
        app:shimmer_repeat_mode="restart"
        app:shimmer_repeat_count="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <include layout="@layout/fragment_shimmer_place_layout" />

    </com.facebook.shimmer.ShimmerFrameLayout>

    <ScrollView
        android:id="@+id/main_view"
        android:visibility="gone"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            tools:context=".ui.detail.DetailFragment">

            <TextView
                android:id="@id/network_error"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/no_internet_connection"
                android:textAlignment="center"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="22sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/pager_gallery"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:focusableInTouchMode="true"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="5dp"
                android:layout_marginTop="260dp"
                android:layout_marginEnd="10dp"
                android:background="#80F9F9F9"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/indicator_gallery"
                    tools:text="2 / 3"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                android:id="@id/place_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_semibold"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pager_gallery"
                tools:text="Parangtritis Beach" />

            <TextView
                android:id="@+id/place_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/place_name"
                tools:text="Bantu, Yogyakarta • " />

            <TextView
                android:id="@+id/place_open_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/blue"
                android:textSize="12sp"
                android:text="@string/open_in_map"
                app:layout_constraintStart_toEndOf="@id/place_location"
                app:layout_constraintTop_toBottomOf="@id/place_name" />


            <ImageView
                android:id="@+id/icon_star"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/rating"
                android:src="@drawable/ic_baseline_star_24"
                app:layout_constraintRight_toLeftOf="@id/place_rating"
                app:layout_constraintTop_toBottomOf="@id/pager_gallery"
                app:tint="@color/yellow" />

            <TextView
                android:id="@id/place_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_semibold"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pager_gallery"
                tools:text="8.2" />

            <TextView
                android:id="@+id/place_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/place_location"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum" />

            <TextView
                android:id="@+id/top_reviews_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/top_reviews"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/place_desc" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_top_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/top_reviews_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_all_review"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/see_all_reviews"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/blue"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_top_review"
                app:strokeWidth="0dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/button_give_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:padding="10dp"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:text="@string/give_a_review" />

</LinearLayout>
