<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".ui.place.feedback.CreateFeedbackFragment">

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:numStars="5"
        android:progressTint="@color/yellow"
        android:rating="0.5"
        android:stepSize="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/yellow" />

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ratingBar"
        app:layout_constraintStart_toStartOf="@+id/ratingBar"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
        tools:text="Best Place !" />

    <TextView
        android:id="@+id/title_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/title_review"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_rating" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_desc"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_review">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/review_desc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/hint_review"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/add_image_one"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:baselineAlignBottom="true"
        android:clickable="true"
        android:contentDescription="@string/add_image"
        android:focusable="true"
        android:src="@drawable/ic_add_box"
        app:layout_constraintEnd_toStartOf="@+id/add_image_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_desc" />

    <ImageView
        android:id="@+id/add_image_two"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:baselineAlignBottom="true"
        android:clickable="true"
        android:contentDescription="@string/add_image"
        android:focusable="true"
        android:src="@drawable/ic_add_box"
        app:layout_constraintEnd_toStartOf="@+id/add_image_three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/add_image_one"
        app:layout_constraintTop_toBottomOf="@id/container_desc" />

    <ImageView
        android:id="@+id/add_image_three"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:baselineAlignBottom="true"
        android:clickable="true"
        android:contentDescription="@string/add_image"
        android:focusable="true"
        android:src="@drawable/ic_add_box"
        app:layout_constraintEnd_toStartOf="@+id/add_image_four"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/add_image_two"
        app:layout_constraintTop_toBottomOf="@id/container_desc" />

    <ImageView
        android:id="@+id/add_image_four"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:baselineAlignBottom="true"
        android:clickable="true"
        android:contentDescription="@string/add_image"
        android:focusable="true"
        android:src="@drawable/ic_add_box"
        app:layout_constraintEnd_toStartOf="@+id/add_image_five"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/add_image_three"
        app:layout_constraintTop_toBottomOf="@id/container_desc" />

    <ImageView
        android:id="@+id/add_image_five"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:baselineAlignBottom="true"
        android:clickable="true"
        android:contentDescription="@string/add_image"
        android:focusable="true"
        android:src="@drawable/ic_add_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/add_image_four"
        app:layout_constraintTop_toBottomOf="@id/container_desc" />

    <Button
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/button_add_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:text="@string/submit" />

</androidx.constraintlayout.widget.ConstraintLayout>